task(VENLY-3560) code refactor